[package]
name = "bit-pool"
version = "1.1.1"
authors = ["Anonymous"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'sr-primitives/std',
    'runtime-io/std',
]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.2'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'


[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
version = '0.7.3'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'
